# SRE-skills-bench

./: #README.md#  .gitignore  CLAUDE.md  README.md  TERRAFORM_GENERATION_BENCHMARK.md  data.csv  models.json  models_archived.json  plot_benchmark.py  pyproject.toml  requirements.txt  results_20251121_131811.csv  run-all-sre-skills-bench-tasks.sh
.github/: dependabot.yml
datasets/mcq_cleaned/: azure-compute-mcq.json  azure-k8s-mcq.json  azure-network-mcq.json  gcp-compute-mcq.json  gcp-network-mcq.json  gcp-storage-mcq.json  iam-mcq.json  s3-security-mcq.json  vpc-nat-mcq.json
evals/rootly_terraform_clean/: __init__.py  rootly_terraform_clean.py
scripts/: clean_mcq_datasets.py  results_20251202_142311.csv  results_20251202_142629.csv  results_20251202_142703.csv  results_20251202_143550.csv  results_20251202_143727.csv  results_20251202_164136.csv  results_20251202_164829.csv  run-all-sre-skills-bench-tasks.sh  run-single-model.sh  run-terraform-generation-bench.sh
scripts/logs/: 2025-12-02T16-48-33-05-00_rootly-terraform_mKGgfbyjYF6NDkYEUkYvmS.json  2025-12-04T16-22-39-05-00_rootly-terraform_P3CaLn8ANdmPgFxSqKdVeW.json  2025-12-04T16-43-03-05-00_rootly-terraform_XeULf6u5Q2JnQeFZaVvmHH.json  2025-12-04T16-45-29-05-00_rootly-terraform_3rxwYGc8wToaeBRLtCK2iR.json
src/sre_skills_bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/terraform_generation_bench/: benchmark.py  benchmark_cli.py  llm_client.py  report_generator.py  terraform_generator.py
src/terraform_generation_bench/runner/: checks.py  run_task.py  utils.py
static/: data.csv
